--- a/assignments/prompts/Assignment1-Part2.html
+++ b/assignments/prompts/Assignment1-Part2.html
@@ -4,7 +4,10 @@
     <title>Assignment 1 Part 2 | Cloning your repository via the Github Desktop app</title>
     <style>
       img {
-        max-width: 100vw;
+        border: 5px dashed lightgreen;
+        margin: 24px 0;
+        max-width: calc(100vw - 100px);
+        padding: 12px;
       }
     </style>
   </head>
