--- a/assignments/prompts/Assignment1-Part1.html
+++ b/assignments/prompts/Assignment1-Part1.html
@@ -2,6 +2,14 @@
 <html lang="en-US">
   <head>
     <title>Assignment 1 Part 1 | Create your GitHub Pages website</title>
+    <style>
+      img {
+        border: 5px dashed lightgreen;
+        margin: 24px 0;
+        max-width: calc(100vw - 100px);
+        padding: 12px;
+      }
+    </style>
   </head>
   <body>
     <h4>Assignment 1 Part 1</h4>
