--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -34,7 +34,8 @@
             </div>
           </div>
           <aside class="legend">
-            <h3>Legend</h3>
+            <h3>Interactive Legend</h3>
+            <h5>(hover over to highlight matching code)</h5>
             <div class="openingTag">HTML Opening Tag</div>
             <div class="closingTag">HTML Closing Tag</div>
           </aside>
