--- a/agenda.html
+++ b/agenda.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>AGENDA 4/21</title>
+    <title>AGENDA 4/28</title>
     <style>
       #classMotto{
         font-size: 60px;
@@ -19,14 +19,12 @@
     </style>
   </head>
   <body>
-    <h1>Today's Agenda (4/21)</h1>
-    <h2>Announcements (8:05)</h2>
-    <h3>(if you're not here by 8:10, you're tardy!)</h3>
-    <h2>Period 1 (8:10-8:50): Final Eval Lab Time</h2>
-    <h2>Period 2 (9-9:50): Final Eval Lab Time</h2>
-    <h2>Period 3 (10:10-11:50): Final Eval Lab Time</h2>
-    <h2>Period 4 (12:10-1): Final Eval Lab Time and Turn-in</h2>
-
-    <img src="https://i.ytimg.com/vi/09D3KQJE5-E/maxresdefault.jpg">
+    <h1>Today's Agenda (4/28)</h1>
+    <h2>Announcements (6:05)</h2>
+    <h3>(if you're not here by 6:10, you're tardy!)</h3>
+    <h2>Period 1 (6:10-6:50): Introductions and Course Overview</h2>
+    <h2>Period 2 (7-7:50): Intro to Web Servers, FTP, and Source Control</h2>
+    <h2>Period 3 (8:10-9:50): Github Pages Setup, Github Desktop, and Repository Cloning</h2>
+    <h2>Period 4 (10:10-11): Atom and Publishing your First Webpage</h2>
   </body>
 </html>
