--- a/index.html
+++ b/index.html
@@ -1,9 +1,151 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
   <head>
-    <title>HELLO WORLD</title>
+    <title>107 PORTFOLIO NEXUS</title>
+    <style>
+      .root {
+        font-family: Verdana, sans-serif;
+        text-align: center;
+      }
+      .portfolio {
+        display: inline-block;
+        margin-top: 24px;
+        text-align: center;
+        width: 440px;
+      }
+
+      .portfolio a {
+        background-color: #DFDFDF;
+        display: inline-block;
+        height: 100%;
+        padding: 12px;
+        width: 42%;
+      }
+    </style>
   </head>
   <body>
-    <h1>This is a basic "Hello World" template for an HTML file.</h1>
+    <div class="root">
+      <h1>Portfolio Nexus</h1>
+      <h2>
+        These are the Portfolios and Repositories of my wonderful students!
+      </h2>
+
+      <div class="portfolio">
+        <a href="https://ad-graphics.github.io/" target="_blank">
+          Alexandra's Portfolio
+        </a>
+        <a href="https://github.com/ad-graphics/ad-graphics.github.io" target="_blank">
+          Alexandra's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://arkinnick92.github.io/" target="_blank">
+          Andrew's Portfolio
+        </a>
+        <a href="https://github.com/arkinnick92/arkinnick92.github.io" target="_blank">
+          Andrew's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://antoflogom.github.io/" target="_blank">
+          Antoniel's Portfolio
+        </a>
+        <a href="https://github.com/AntoFloGom/AntoFloGom.github.io" target="_blank">
+          Antoniel's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://deandrepx.github.io/" target="_blank">
+          Deandre's Portfolio
+        </a>
+        <a href="https://github.com/deandrepx/deandrepx.github.io" target="_blank">
+          Deandre's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://wren-peak.github.io/" target="_blank">
+          Heidi's Portfolio
+        </a>
+        <a href="https://github.com/wren-peak/wren-peak.github.io" target="_blank">
+          Heidi's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://vynmont.github.io/" target="_blank">
+          Holvyn's Portfolio
+        </a>
+        <a href="https://github.com/vynmont/vynmont.github.io" target="_blank">
+          Holvyn's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://izmclemore.github.io/" target="_blank">
+          Imani's Portfolio
+        </a>
+        <a href="https://github.com/izmclemore/izmclemore.github.io" target="_blank">
+          Imani's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://jackb7.github.io/" target="_blank">
+          Jack's Portfolio
+        </a>
+        <a href="https://github.com/jackb7/jackb7.github.io" target="_blank">
+          Jack's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://jamet-t.github.io/" target="_blank">
+          James' Portfolio
+        </a>
+        <a href="https://github.com/jamet-t/jamet-t.github.io" target="_blank">
+          James' Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://jennand456.github.io/		" target="_blank">
+          Jennifer's Portfolio
+        </a>
+        <a href="https://github.com/jennand456/jennand456.github.io" target="_blank">
+          Jennifer's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://kreative7.github.io/" target="_blank">
+          Kathian's Portfolio
+        </a>
+        <a href="https://github.com/kreative7/kreative7.github.io" target="_blank">
+          Kathian's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://jynxxchan.github.io/jynxxchan/" target="_blank">
+          Krista's Portfolio
+        </a>
+        <a href="https://github.com/jynxxchan/jynxxchan" target="_blank">
+          Krista's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://pjmosley.github.io/" target="_blank">
+          Precious' Portfolio
+        </a>
+        <a href="https://github.com/pjmosley/pjmosley.github.io" target="_blank">
+          Precious' Repository
+        </a>
+      </div>
+    </div>
   </body>
 </html>
