--- a/agenda.html
+++ b/agenda.html
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>AGENDA 5/2</title>
-    <style>
-      #classMotto{
-        font-size: 60px;
-        font-weight: bold;
-        margin-top: 60px;
-      }
-      .big {
-        font-size: 60px;
-        font-weight: bold;
-        margin: 20px 0;
-      }
-      img {
-        width: 100%;
-      }
-    </style>
+    <title>AGENDA 5/3</title>
   </head>
   <body>
-    <h1>Today's Agenda (5/2)</h1>
+    <h1>Today's Agenda (5/3)</h1>
     <h2>Announcements (6:05)</h2>
     <h3>(if you're not here by 6:10, you're tardy!)</h3>
-    <h2>Period 1 (6:10-6:50): Github Review & History of HTML</h2>
-    <h2>Period 2 (7-7:50): Intro to HTML, plus Heading and Text-styling Tags</h2>
-    <h2>Period 3 (8:10-9:50): Images and Links, Assignment 2 Lab Time</h2>
+    <h2>Period 1 (6:10-6:50): Review of HTML Tags, and Intro to Inline CSS</h2>
+    <h2>Period 2 (7-7:50): More CSS (Inline vs Block Display)</h2>
+    <h2>Period 3 (8:10-9:50): Possibly more CSS (Box Model), Lab Time</h2>
     <h2>Period 4 (10:10-11): More Lab Time</h2>
   </body>
 </html>
