--- a/examples/week1/Day03_inlinestyles.html
+++ b/examples/week1/Day03_inlinestyles.html
@@ -1,90 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>Inline Styles Examples</title>
   </head>
   <body>
-    <h1>This is a page with examples of Inline Styles.</h1>
+    <h1>This is an Inline Styles example page.</h1>
 
-    <p style="font-weight: bold; font-size: 32px;">
-      This is a P tag that is styled like an H1 tag.
+    <p style="font-weight: bold;">
+      This is some example text.
+    </p>
+    <p style="font-style: italic;">
+      This is some more example text.
+    </p>
+    <p style="font-size: 24px;">
+      I want this text to be bigger.
     </p>
 
-    <p style="color: forestgreen;">
-      This is an example of some colored text using a color name.
+    <p style="color: #FF00FF;">
+      I want this text to be colored.
+    </p>
+    <p style="background-color: yellow; color: red;">
+      I want this text highlighted.
     </p>
 
-    <p style="color: #8aB4f8;">
-      This is an example of some colored text using a hex color.
-    </p>
-
-    <p style="background-color: yellow; display: inline;">
-      This is an example of highlighted text.
-    </p>
-    <p style="background-color: red; display: inline;">
-      This is an example of highlighted text.
-    </p>
-    <br /><br /><br /><br />
-
-    <!-- this is the new stuff -->
-    <div style="border: 5px dashed red; text-align: center;">
-      <div style="
-        text-align: left;
-        border: 1px solid;
-        background-color: pink;
-        padding: 24px;
-        margin: 24px;
-        height: 300px;
-      ">
-        Hello world, this is a div.
-      </div>
-      <div style="
-        text-align: center;
-        border: 1px solid;
-        background-color: aquamarine;
-        padding: 8px;
-        margin: 48px;
-        width: 200px;
-        display: inline-block;
-      ">
-        Hello world, this is a div.
-      </div>
-      <div style="
-        text-align: right;
-        border: 1px solid;
-        border-radius: 24px;
-        background-color: goldenrod;
-        padding: 48px;
-        margin: 24px;
-      ">
-        Hello world, this is a div.
-      </div>
-      <div style="
-        background: blue;
-        border: 1px solid;
-        border-radius: 50%;
-        display: inline-block;
-        width: 200px;
-        height: 200px;
-      ">
-      </div>
-      <br />
-      <img
-        style="
-          border: 5px solid red;
-          width: 100px;
-          height: 200px;
-        "
-        src="../images/cat.png"
-      />
+    <div style="background-color: skyblue;">
+      This is text inside of a div tag.
+    </div>
+    <div style="background-color: skyblue;">
+      This is text inside of a div tag.
     </div>
 
+    <span style="background-color: green;">
+      This is text inside of a span tag.
+    </span>
+    <span style="background-color: green;">
+      This is text inside of a span tag.
+    </span>
 
+    <p>
+      This is some <span style="font-size:36px;">random</span> text.
+      Don't you like it?
+    <p>
 
-
-
-
-
-
+    <!-- Block level elements respect height and margin top/bottom -->
+    <div style="display: block; height: 100px; margin-top: 50px; background-color: red;">
+      This is an example of a block level element.
+    </div>
+    <!-- Inline level elements DO NOT respect height and margin top/bottom -->
+    <div style="display: inline; height: 100px; margin-top: 50px; background-color: forestgreen;">
+      This is an example of a inline level element.
+    </div>
+    <!-- Inline-block level elements DO respect height and margin top/bottom -->
+    <div style="display: inline-block; height: 100px; margin-top: 50px; background-color: turquoise;">
+      This is an example of a inline-block level element.
+    </div>
   </body>
 </html>
