--- a/agenda.html
+++ b/agenda.html
@@ -2,14 +2,33 @@
 <html lang="en-US">
   <head>
     <title>AGENDA 5/3</title>
+    <style>
+      ul {
+        font-size: 24px;
+      }
+    </style>
   </head>
   <body>
     <h1>Today's Agenda (5/3)</h1>
     <h2>Announcements (6:05)</h2>
     <h3>(if you're not here by 6:10, you're tardy!)</h3>
-    <h2>Period 1 (6:10-6:50): Review of HTML Tags, and Intro to Inline CSS</h2>
-    <h2>Period 2 (7-7:50): More CSS (Inline vs Block Display)</h2>
-    <h2>Period 3 (8:10-9:50): Possibly more CSS (Box Model), Lab Time</h2>
+    <h2>Period 1 (6:10-6:50): Review of CSS, and Intro to Id Links (Anchors)</h2>
+    <h2>Period 2 (7-7:50): Github Review Kahoot & Github Quiz</h2>
+    <h2>Period 3 (8:10-9:50): Ad-hoc Portfolio Design, Lab Time</h2>
     <h2>Period 4 (10:10-11): More Lab Time</h2>
+    <br><br>
+    <h2>107 Grade Breakdown</h2>
+    <ul>
+      <li>Assignments: 10%</li>
+      <li>Projects: 40%</li>
+      <li>Quizzes: 20%</li>
+      <li>
+        Final: 30%
+        <ul>
+          <li>Final Exam: 15%</li>
+          <li>Final Eval: 15%</li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
