--- a/agenda.html
+++ b/agenda.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>AGENDA 5/3</title>
+    <title>AGENDA 5/5</title>
     <style>
       ul {
         font-size: 24px;
       }
+      #agenda {
+        padding-left: 36px;
+      }
     </style>
   </head>
   <body>
-    <h1>Today's Agenda (5/3)</h1>
-    <h2>Announcements (6:05)</h2>
-    <h3>(if you're not here by 6:10, you're tardy!)</h3>
-    <h2>Period 1 (6:10-6:50): Review of CSS, and Intro to Id Links (Anchors)</h2>
-    <h2>Period 2 (7-7:50): Github Review Kahoot & Github Quiz</h2>
-    <h2>Period 3 (8:10-9:50): Ad-hoc Portfolio Design, Lab Time</h2>
-    <h2>Period 4 (10:10-11): More Lab Time</h2>
+    <h1>Today's Agenda (5/5)</h1>
+    <div id="agenda">
+      <h2>Announcements (6:05)</h2>
+      <h3>(if you're not here by 6:10, you're tardy!)</h3>
+      <h2>Period 1 (6:10-6:50): Lab Time</h2>
+      <h2>Period 2 (7-7:50): Internal vs External CSS</h2>
+      <h2>Period 3 (8:10-9:50): More External CSS</h2>
+      <h2>Period 4 (10:10-11): Lab Time</h2>
+    </div>
+    <br><br>
+    <h2>Assignment 3 due tonight!
     <br><br>
     <h2>107 Grade Breakdown</h2>
     <ul>
