--- a/examples/week2/Day05_externalcss.html
+++ b/examples/week2/Day05_externalcss.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>External CSS Example</title>
-    <link href="../css/myfirstexternalcss.css" rel="stylesheet">
+    <link href="../../css/myfirstexternalcss.css" rel="stylesheet">
   </head>
   <body>
     <div class="card">
-      This is a basic "Hello World" template for an HTML file.
+      This is a card styled with External CSS.
+    </div>
+    <div class="button">
+      This is my first button!
+    </div>
+    <div class="button">
+      This is my second button!
     </div>
   </body>
 </html>
