added void tags

--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -83,6 +83,34 @@
             <div class="htmlChild">HTML Tag Child</div>
           </aside>
         </div>
+        <div class="contentContainer">
+          <div class="content">
+            <h3>Void Elements</h3>
+            <p>Here are some common void elements you may encounter in our class.</p>
+            <p>(Remember that void elements are HTML elements that should <em>NOT</em> have a closing tag. Every other HTML tag <em>SHOULD</em> have a closing tag.)</p>
+            <div>
+              <h4><span class="code">&lt;head&gt;</span> Elements</h4>
+              <div class="indent1"><span class="code">&lt;link&gt;</span> - Link (to external resources)</div>
+              <div class="indent1"><span class="code">&lt;meta&gt;</span> - Metadata</div>
+              <h4><span class="code">&lt;body&gt;</span> Elements</h4>
+              <div class="indent1"><span class="code">&lt;br&gt;</span> - Line Break</div>
+              <div class="indent1"><span class="code">&lt;hr&gt;</span> - Horizontal Rule</div>
+              <div class="indent1"><span class="code">&lt;img&gt;</span> - Image</div>
+              <div class="indent1"><span class="code">&lt;col&gt;</span> - Column, used in a <span class="code">&lt;colgroup&gt;</span> element, in a <span class="code">&lt;table&gt;</span></div>
+              <div class="indent1"><span class="code">&lt;input&gt;</span> - Input Field, used in a <span class="code">&lt;form&gt;</span> element</div>
+              <div class="indent1"><span class="code">&lt;source&gt;</span> - Source, used in a <span class="code">&lt;audio&gt;</span> or <span class="code">&lt;video&gt;</span> element</div>
+              <h4>Other Elements</h4>
+              <div class="indent1"><span class="code">&lt;area&gt;</span> - Area (image map hyperlink)</div>
+              <div class="indent1"><span class="code">&lt;base&gt;</span> - Base URL</div>
+              <div class="indent1"><span class="code">&lt;command&gt;</span> - Command</div>
+              <div class="indent1"><span class="code">&lt;embed&gt;</span> - Embed (integration point for plugins)</div>
+              <div class="indent1"><span class="code">&lt;param&gt;</span> - Parameter (initialization point for plugins)</div>
+              <div class="indent1"><span class="code">&lt;keygen&gt;</span> - Key-pair generator/input control</div>
+              <div class="indent1"><span class="code">&lt;track&gt;</span> - Track (supplementary media track)</div>
+              <div class="indent1"><span class="code">&lt;wbr&gt;</span> - Line break opportunity</div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="css">
         <h2>CSS</h2>
