--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -111,6 +111,24 @@
             </div>
           </div>
         </div>
+        <div class="contentContainer">
+          <div class="content">
+            <h3>Semantic Elements</h3>
+            <p>Here are some common semantic elements you may encounter in our class.</p>
+            <p>(Remember that semantic elements generally do not affect a page visually, but they do give <em>MEANING</em> to elements within a page.)</p>
+            <div>
+              <div class="indent1"><span class="code">&lt;header&gt;&lt;/header&gt;</span> - Header</div>
+              <div class="indent1"><span class="code">&lt;nav&gt;&lt;/nav&gt;</span> - Navigation</div>
+              <div class="indent1"><span class="code">&lt;main&gt;&lt;/main&gt;</span> - Main</div>
+              <div class="indent1"><span class="code">&lt;section&gt;&lt;/section&gt;</span> - Section</div>
+              <div class="indent1"><span class="code">&lt;article&gt;&lt;/article&gt;</span> - Article</div>
+              <div class="indent1"><span class="code">&lt;summary&gt;&lt;/summary&gt;</span> - Summary</div>
+              <div class="indent1"><span class="code">&lt;details&gt;&lt;/details&gt;</span> - Details</div>
+              <div class="indent1"><span class="code">&lt;aside&gt;&lt;/article&gt;</span> - Aside</div>
+              <div class="indent1"><span class="code">&lt;footer&gt;&lt;/footer&gt;</span> - Footer</div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="css">
         <h2>CSS</h2>
