--- a/agenda.html
+++ b/agenda.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>AGENDA 5/5</title>
+    <title>AGENDA 5/9</title>
     <style>
       ul {
         font-size: 24px;
@@ -12,17 +12,17 @@
     </style>
   </head>
   <body>
-    <h1>Today's Agenda (5/5)</h1>
+    <h1>Today's Agenda (5/9)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
       <h2>Period 1 (6:10-6:50): Lab Time</h2>
-      <h2>Period 2 (7-7:50): Internal vs External CSS</h2>
-      <h2>Period 3 (8:10-9:50): More External CSS</h2>
+      <h2>Period 2 (7-7:50): CSS Review</h2>
+      <h2>Period 3 (8:10-9:50): HTML Lists and List Styling</h2>
       <h2>Period 4 (10:10-11): Lab Time</h2>
     </div>
     <br><br>
-    <h2>Assignment 3 due tonight!
+    <h2>Assignments 4 and 5 due tomorrow</h2>
     <br><br>
     <h2>107 Grade Breakdown</h2>
     <ul>
