--- a/agenda.html
+++ b/agenda.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <h1>Tonight's Agenda (5/10)</h1>
+    <h1>Tonight's Agenda (Day 8 - 5/10)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
