--- a/examples/week3/Day11_layouts_tableVsFloat.html
+++ b/examples/week3/Day11_layouts_tableVsFloat.html
@@ -89,7 +89,7 @@
           <div><a href="#">Contact</a></div>
         </td>
         <td class="content" colspan="1">
-          <img class="cat" src="../images/cat.png" alt="cat" />
+          <img class="cat" src="../../images/cat.png" alt="cat" />
           <div>
             Cillum instituendarum commodo aute laboris, veniam ingeniis
             familiaritatem. Sint non proident e deserunt consectetur hic
@@ -101,7 +101,7 @@
             consectetur, nam iis enim dolor minim.
           </div>
           <div class="clear"></div>
-          <img class="dog" src="../images/dog.jpeg" alt="dog" />
+          <img class="dog" src="../../images/dog.jpeg" alt="dog" />
           <div>
             Cillum instituendarum commodo aute laboris, veniam ingeniis
             familiaritatem. Sint non proident e deserunt consectetur hic
@@ -134,7 +134,7 @@
           <div><a href="#">Contact</a></div>
         </div>
         <div class="content">
-          <img class="cat" src="../images/cat.png" alt="cat" />
+          <img class="cat" src="../../images/cat.png" alt="cat" />
           <div>
             Cillum instituendarum commodo aute laboris, veniam ingeniis
             familiaritatem. Sint non proident e deserunt consectetur hic
@@ -146,7 +146,7 @@
             consectetur, nam iis enim dolor minim.
           </div>
           <div class="clear"></div>
-          <img class="dog" src="../images/dog.jpeg" alt="dog" />
+          <img class="dog" src="../../images/dog.jpeg" alt="dog" />
           <div>
             Cillum instituendarum commodo aute laboris, veniam ingeniis
             familiaritatem. Sint non proident e deserunt consectetur hic
