additional flex cheatsheet changes

--- a/examples/week4/Day13_flex_containers.html
+++ b/examples/week4/Day13_flex_containers.html
@@ -137,13 +137,30 @@
       <div class="flexChild">C</div>
       <div class="flexChild">D</div>
     </div>
-    <h3>Default flexing</h3>
+    <br>
+    <h1>Flex Container Properties</h1>
+    <p>
+      To turn on flex behavior for a container, you must set
+      <b>display: flex;</b>
+      on the container in CSS.
+    </p>
+    <h3>Default flexing (display: flex;)</h3>
     <div class="flexContainer">
       <div class="flexChild">A</div>
       <div class="flexChild">B</div>
       <div class="flexChild">C</div>
       <div class="flexChild">D</div>
     </div>
+    <p>
+      There are four Flex Container properties we'll learning about
+      in our class.  These properties are:
+      <b>flex-direction, flex-wrap, justify-content, and align-items</b>
+    </p>
+    <p>
+      These properties can only be used on elements that also have
+      <b>display: flex;</b>
+      set on them.
+    </p>
     <h2>Flex Direction examples</h2>
     <p>
       This flex property specifies the <b>main axis</b> for
