--- a/examples/week4/Day13_flex_items.html
+++ b/examples/week4/Day13_flex_items.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Media Queries Example</title>
+    <title>Flex Item Properties Cheatsheet</title>
     <style>
       body {
         font-family: Verdana;
