--- a/examples/week4/Day14_mediaqueries.html
+++ b/examples/week4/Day14_mediaqueries.html
@@ -3,6 +3,24 @@
   <head>
     <title>Media Queries Example</title>
     <style>
+      #header {
+        background-color: skyblue;
+        padding: 12px 48px;
+      }
+      #smallScreen,
+      #mediumScreen,
+      #largeScreen {
+        padding: 48px;
+      }
+      #footer {
+        background-color: lavender;
+        padding: 12px 48px;
+      }
+
+      /*
+        The following styles will apply for screen widths
+        greater than 800px
+      */
       @media screen and (min-width: 800px) {
         #header {
           font-size: 36px;
@@ -18,6 +36,11 @@
         }
       }
 
+      /*
+        The following styles will apply for screen widths
+        greater than 480px and less than 799px
+        (or in other words, between 480px and 799px)
+      */
       @media screen and (min-width: 480px) and (max-width: 799px) {
         #header {
           font-size: 24px;
@@ -33,6 +56,10 @@
         }
       }
 
+      /*
+        The following styles will apply for screen widths
+        less than 479px
+      */
       @media screen and (max-width: 479px) {
         #header {
           font-size: 16px;
@@ -49,20 +76,6 @@
         #footer {
           display: none;
         }
-      }
-
-      #header {
-        background-color: skyblue;
-        padding: 12px 48px;
-      }
-      #smallScreen,
-      #mediumScreen,
-      #largeScreen {
-        padding: 48px;
-      }
-      #footer {
-        background-color: lavender;
-        padding: 12px 48px;
       }
     </style>
   </head>
